tests/rosetta/out/Swift/arithmetic-numbers.error
run error: exit status 1
/tmp/TestMochiToSwiftarithmetic-numbers1750161179/001/main.swift:3:22: error: cannot assign value of type '[Any]' to type '[Int]'
  1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:03Z
  2 | func sieve(_ limit: Int) -> [Int] {
  3 |     var spf: [Int] = [Any]()
    |                      |- error: cannot assign value of type '[Any]' to type '[Int]'
    |                      `- note: arguments to generic parameter 'Element' ('Any' and 'Int') are expected to be equal
  4 |     var i = 0
  5 |     while i <= limit {

/tmp/TestMochiToSwiftarithmetic-numbers1750161179/001/main.swift:28:25: error: cannot assign value of type '[Any]' to type '[Int]'
 26 | }
 27 | func primesFrom(_ spf: [Int], _ limit: Int) -> [Int] {
 28 |     var primes: [Int] = [Any]()
    |                         |- error: cannot assign value of type '[Any]' to type '[Int]'
    |                         `- note: arguments to generic parameter 'Element' ('Any' and 'Int') are expected to be equal
 29 |     var i = 3
 30 |     while i <= limit {

/tmp/TestMochiToSwiftarithmetic-numbers1750161179/001/main.swift:46:9: warning: variable 's' was never mutated; consider changing to 'let' constant
 44 | }
 45 | func commatize(_ n: Int) -> String {
 46 |     var s = String(n)
    |         `- warning: variable 's' was never mutated; consider changing to 'let' constant
 47 |     var out = ""
 48 |     var i = s.count - 1

/tmp/TestMochiToSwiftarithmetic-numbers1750161179/001/main.swift:64:13: warning: variable 'mid' was never mutated; consider changing to 'let' constant
 62 |     var hi = primes.count
 63 |     while lo < hi {
 64 |         var mid = Int(((lo + hi) / 2))
    |             `- warning: variable 'mid' was never mutated; consider changing to 'let' constant
 65 |         if primes[mid] < last {
 66 |             lo = mid + 1
